fix: cohérence documentation
